--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Python Debugger: main.py",
       "type": "debugpy",
       "request": "launch",
-      "program": "main.py",
+      "program": "main.pyw",
       "console": "integratedTerminal"
     }
   ]
